# feuersoftware

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  covserver.sh  pypi_build.sh  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yaml  test-and-lint.yaml
feuersoftware/: __init__.py
feuersoftware/tests/: test_api.py
src/feuersoftware/: __init__.py  api.py  models.py
tests/: test_alarmgroup.py  test_basic.py  test_feuersoftware.py  test_geocoding.py  test_news.py  test_operation.py  test_passwordcheck.py  test_user_status.py  test_vehicle_status.py
